corpus/cpp/inheritance_virtual/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:8:13: error: [inheritance_virtual] inheritance or virtual function error
help: implement all pure virtual functions or fix the class hierarchy
raw : cannot declare variable 'value' to be of abstract type 'Derived'
| src/main.cpp:8:13
|     Derived value;
|             ^
note: because the following virtual functions are pure within 'Derived':
note: 'virtual int Base::value() const'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output